--- a/app/css/spongetest.css
+++ b/app/css/spongetest.css
@@ -1,278 +1,1 @@
-@charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:300|Roboto:300,300i,500,500i");
-
-/*
- =====================================================
-
-   _____                                _    _ _  __
-  / ____|                              | |  | | |/ /
- | (___  _ __   ___  _ __   __ _  ___  | |  | | ' /
-  \___ \| '_ \ / _ \| '_ \ / _` |/ _ \ | |  | |  <
-  ____) | |_) | (_) | | | | (_| |  __/ | |__| | . \
- |_____/| .__/ \___/|_| |_|\__, |\___|  \____/|_|\_\
-        | |                 __/ |
-        |_|                |___/
-
-=====================================================
- SPONGE UK DEVELOPER TEST
- Main CSS
-=====================================================
-*/
-
-body {
-  min-width: 320px;
-
-  font-family: "Roboto", serif;
-  color: #212D35;
-  font-weight: 300;
-}
-
-#header-wrapper {
-  position: relative;
-
-  background: #F9423A;
-
-  z-index: 2;
-}
-
-  #header {
-    padding-top: 60px;
-    padding-bottom: 45px;
-
-    color: #FFF;
-  }
-
-  #header img {
-    margin-right: auto;
-    margin-bottom: 30px;
-    margin-left: auto;
-
-    display: block;
-  }
-
-  #header h1 {
-    color: #FFF;
-  }
-
-  #header h1 + p {
-    font-size: 1.8em;
-  }
-
-#content {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-  #content img{
-    width: 100%;
-  }
-
-#tasks {
-  padding-top: 30px;
-  padding-right: 20px;
-  padding-bottom: 50px;
-  padding-left: 20px;
-
-  position: relative;
-
-  background-color: #F2F2F2;
-
-  counter-reset: tasks;
-
-  z-index: 1;
-}
-
-  #tasks article {
-    counter-increment: tasks;
-  }
-
-    #tasks article h5 {
-      color: #F9423A;
-    }
-
-    #tasks article h5::before {
-      min-width: 0.75em;
-      padding-right: 0.5em;
-
-      display: inline-block;
-
-      color: #212D35;
-      font-weight: 300;
-      vertical-align: text-bottom;
-
-      content: counter(tasks) ".";
-    }
-
-    #tasks article h5 .difficulty {
-      margin-left: 1.5em;
-
-      display: inline-block;
-
-      float: right;
-
-      color: #FFB400;
-      font-size: 0.8em;
-      white-space: nowrap;
-    }
-
-      #tasks article h5 .difficulty .fa {
-        margin-left: 0.1em;
-      }
-
-      #tasks article h5 .difficulty .fa-star-o {
-        color: #7E7772;
-      }
-
-#footer-wrapper {
-  padding-top: 30px;
-  padding-bottom: 10px;
-
-  position: relative;
-
-  color: #FFF;
-
-  background-color: #212D35;
-
-  z-index: 2;
-}
-
-  #footer a {
-    color: inherit;
-  }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 300;
-}
-
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: #F9423A;
-}
-
-p,
-ul,
-ol {
-  font-size: 1.5em;
-}
-
-  p code,
-  li code {
-    padding-right: 0.2em;
-    padding-left: 0.2em;
-
-    line-height: 1.35;
-    vertical-align: baseline;
-    font-size: 0.9em;
-
-    background-color: #D4D4D4;
-
-    outline: none;
-  }
-
-code,
-pre {
-  font-family: "Roboto Mono", monospace;
-  font-weight: 300;
-}
-
-strong {
-  font-weight: 500;
-}
-
-/**
- * Styles to make the boxes actually visible to start
- */
-#boxes {
-  padding: 70px;
-  position: relative;
-  direction: rtl; /** I'm sure this should be done with flexbox **/
-}
-#boxes::after{
-  content: 'Wrapper';
-  position: absolute;
-  bottom: -50px;
-  right: 0;
-  font-size: 1.5em;
-  background-color: #7B0051;
-  padding: 20px;
-  color: white;
-}
-
-#box-left {
-  min-height: 50px;
-  vertical-align: middle;
-  width: 50%;
-  max-width: 100%;
-  display: inline-block;
-  order: 2;
-  position: relative;
-}
-#box-left::after{
-  content: 'Left';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 1.5em;
-  color: white;
-}
-
-#box-right {
-  min-height: 100%;
-  height: 100%;
-  min-width: 50px;
-  width: 50%;
-  display: inline-block;
-  order: 1;
-  padding-bottom: 50%;
-  vertical-align: middle;
-  position: relative;
-}
-#box-right::after{
-  content: 'Right';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 1.5em;
-  color: white;
-}
-
-@media screen and (min-width: 460px){
-  #box-left{
-    max-width: 210px;
-    transform: translate(-25%, -0%);
-  }
-}
-@media screen and (min-width: 762px){
-  #box-left{
-    transform: translate(-0%, -0%);
-  }
-}
-
-/**
- * Styles for the tabs
- */
- .tabs li{
-   cursor: pointer;
-   padding: 5px 10px;
- }
- .tab-content img{
-   max-width: 200px;
- }
- .tab-content{
-   display: none;
- }
-.tab-content.current{
-   display: block;
- }
- 
- 
+@import url(https://fonts.googleapis.com/css?family=Roboto+Mono:300|Roboto:300,300i,500,500i);body{min-width:320px;font-family:Roboto,serif;color:#212d35;font-weight:300}#header-wrapper{position:relative;background:#f9423a;z-index:2}#header{padding-top:60px;padding-bottom:45px;color:#fff}#header img{margin-right:auto;margin-bottom:30px;margin-left:auto;display:block}#header h1{color:#fff}#header h1+p{font-size:1.8em}#content{padding-top:30px;padding-bottom:30px}#content img{width:100%}#tasks{padding-top:30px;padding-right:20px;padding-bottom:50px;padding-left:20px;position:relative;background-color:#f2f2f2;counter-reset:tasks;z-index:1}#tasks article{counter-increment:tasks}#tasks article h5{color:#f9423a}#tasks article h5::before{min-width:.75em;padding-right:.5em;display:inline-block;color:#212d35;font-weight:300;vertical-align:text-bottom;content:counter(tasks) "."}#tasks article h5 .difficulty{margin-left:1.5em;display:inline-block;float:right;color:#ffb400;font-size:.8em;white-space:nowrap}#tasks article h5 .difficulty .fa{margin-left:.1em}#tasks article h5 .difficulty .fa-star-o{color:#7e7772}#footer-wrapper{padding-top:30px;padding-bottom:10px;position:relative;color:#fff;background-color:#212d35;z-index:2}#footer a{color:inherit}h1,h2,h3,h4,h5,h6{font-weight:300}h2,h3,h4,h5,h6{color:#f9423a}ol,p,ul{font-size:1.5em}li code,p code{padding-right:.2em;padding-left:.2em;line-height:1.35;vertical-align:baseline;font-size:.9em;background-color:#d4d4d4;outline:0}code,pre{font-family:"Roboto Mono",monospace;font-weight:300}strong{font-weight:500}#boxes{padding:70px;position:relative;direction:rtl}#boxes::after{content:'Wrapper';position:absolute;bottom:-50px;right:0;font-size:1.5em;background-color:#7b0051;padding:20px;color:#fff}#box-left{min-height:50px;vertical-align:middle;width:50%;max-width:100%;display:inline-block;order:2;position:relative}@media screen and (min-width:460px){#box-left{max-width:210px;transform:translate(-25%,0)}}@media screen and (min-width:762px){#box-left{transform:translate(0,0)}}#box-left::after{content:'Left';position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-size:1.5em;color:#fff}#box-right{min-height:100%;height:100%;min-width:50px;width:50%;display:inline-block;order:1;padding-bottom:50%;vertical-align:middle;position:relative}#box-right::after{content:'Right';position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-size:1.5em;color:#fff}.tabs li{cursor:pointer;padding:5px 10px}.tab-content{display:none}.tab-content img{max-width:200px}.tab-content.current{display:block}
