Task 12 - Responsive CSS

--- a/app/scss/spongetest.scss
+++ b/app/scss/spongetest.scss
@@ -29,6 +29,10 @@ body {
   font-family: "Roboto", serif;
   color: $grey;
   font-weight: 300;
+  
+  @media screen and (max-width: 500px){
+    font-size: 125%;
+  }
 }
 
 #header-wrapper {
